# Twitch_emote_detector

./: Makefile  README.md  pyproject.toml
data/: collected_data.npz
models/: pose_classify_model.pkl
src/: data_collector.py  holistic_detector.py  main.py  pose_classify_model.py  preprocessor.py  test.py
